Prevent wrapping on views/likes

--- a/src/components/ListItem.module.css
+++ b/src/components/ListItem.module.css
@@ -20,3 +20,7 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.6);
   transform: perspective(400px) translateZ(10px);
 }
+
+.data {
+  white-space: nowrap;
+}
